--- a/DroidCafeChallenge/app/src/main/res/values/strings.xml
+++ b/DroidCafeChallenge/app/src/main/res/values/strings.xml
@@ -26,4 +26,24 @@
     <string name="froyo_order_message">You ordered a FroYo.</string>
     <string name="change_dessert">Change dessert</string>
     <string name="order_label_text">Order:</string>
+    <string name="name_label_text">textPersonName</string>
+    <string name="enter_name_hint">Enter your name</string>
+    <string name="name_label">Name:</string>
+    <string name="address_label_text">Address</string>
+    <string name="enter_address_hint">Enter Address</string>
+    <string name="note_label">Note:</string>
+    <string name="phone_label_text">Phone</string>
+    <string name="enter_phone_hint">Enter Phone</string>
+    <string name="note_label_text">Note</string>
+    <string name="enter_note_hint">Enter note</string>
+    <string name="choose_delivery_method">Choose a delivery method:</string>
+    <string name="next_day_ground_delivery">Next day ground delivery</string>
+    <string name="pick_up">Pick up</string>
+    <string name="same_day_messenger_service">same_day_messanger_service</string>
+    <string-array name="labels_array">
+        <item>Home</item>
+        <item>Work</item>
+        <item>Mobile</item>
+        <item>Other</item>
+    </string-array>
 </resources>
